Initial project setup

--- a/Example/JBTabBarAnimation/Base.lproj/Main.storyboard
+++ b/Example/JBTabBarAnimation/Base.lproj/Main.storyboard
@@ -1,14 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="6nh-qY-PeJ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--View Controller-->
+        <scene sceneID="Beg-xD-Yac">
+            <objects>
+                <viewController id="T2Z-LH-F3v" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="eTA-fM-CHW"/>
+                        <viewControllerLayoutGuide type="bottom" id="1Sh-qk-weE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="S8V-wc-fPJ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.98431372549019602" green="0.0" blue="0.18431372549019609" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" systemItem="contacts" id="bHE-0d-bD7"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4W6-QQ-h0j" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="500" y="-126"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="k80-wT-bkL">
+            <objects>
+                <viewController id="qpo-i0-5VU" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="rk9-n7-jSg"/>
+                        <viewControllerLayoutGuide type="bottom" id="er2-75-fEp"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="8vh-cX-K2K">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.98431372549999996" green="0.0" blue="0.1843137255" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" systemItem="recents" id="u74-de-0tw"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UfL-hC-Dku" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="583" y="-288"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="kkI-3v-8Sc">
+            <objects>
+                <viewController id="wN1-tg-Ujb" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="IA6-jK-BQq"/>
+                        <viewControllerLayoutGuide type="bottom" id="lK0-1f-Ngs"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ukr-RE-eEf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.98431372549999996" green="0.0" blue="0.1843137255" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" systemItem="favorites" id="pPL-kZ-D0j"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="d33-CX-po3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="345" y="232"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
@@ -20,11 +77,35 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.98431372549999996" green="0.0" blue="0.1843137255" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </view>
+                    <tabBarItem key="tabBarItem" systemItem="downloads" id="1dZ-5i-lWh"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1079.2" y="133.5832083958021"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="8Ky-DE-lXi">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="6nh-qY-PeJ" customClass="JBTabBarController" customModule="JBTabBarAnimation" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="niT-LX-C3f" customClass="JBTabBar" customModule="JBTabBarAnimation">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="selectedImageTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="viewControllers" id="ao7-Lk-1Ct"/>
+                        <segue destination="wN1-tg-Ujb" kind="relationship" relationship="viewControllers" id="odF-eF-i2C"/>
+                        <segue destination="qpo-i0-5VU" kind="relationship" relationship="viewControllers" id="MoY-Q4-Tcy"/>
+                        <segue destination="T2Z-LH-F3v" kind="relationship" relationship="viewControllers" id="Ssh-ad-yMY"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Mxr-Mh-25O" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="140" y="133.5832083958021"/>
         </scene>
     </scenes>
 </document>
